# zelos-extension-modbus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
docs/: EXTENSION_IMPLEMENTATION_PLAN.md
examples/: example_registers.json  public_test_server.json  public_test_server_time.json
tests/: test_extension.py  test_modbus.py
zelos_extension_modbus/: __init__.py  client.py  register_map.py
zelos_extension_modbus/cli/: __init__.py  app.py  trace.py
zelos_extension_modbus/demo/: __init__.py  power_meter.json  simulator.py
