[project]
name = "zelos-extension-modbus"
version = "0.1.1"
description = "Modbus TCP/RTU protocol extension for Zelos"
authors = [{ name = "Zelos", email = "support@zeloscloud.io" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["zelos", "extension", "modbus", "plc", "scada", "industrial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "zelos-sdk>=0.0.8",
    "pymodbus>=3.6.0",
    "rich-click>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/zeloscloud/zelos-extension-modbus"
Repository = "https://github.com/zeloscloud/zelos-extension-modbus"
Issues = "https://github.com/zeloscloud/zelos-extension-modbus/issues"
Documentation = "https://docs.zeloscloud.io/extensions"

[project.optional-dependencies]
cli = ["tqdm>=4.66.0"]
dev = [
    "pytest>=8.4.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
    "tomli>=2.3.0; python_version < '3.11'",
]

[project.scripts]
zelos-extension-modbus = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zelos_extension_modbus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "B008",   # function call in defaults (common in decorators)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["PTH123"]  # Allow open() in scripts

[tool.ruff.lint.pydocstyle]
convention = "google"
